--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,33 @@
     <link rel="stylesheet" href="static/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="static/dist/index.js"></script>
+    <style>
+        .task {
+            position: relative;
+        }
+        
+        .edit-task-button {
+            position: absolute;
+            top: 0;
+            right: 0;
+            background-color: #333;
+            border: 1px solid #444;
+            color: #ccc;
+            width: 30px;
+            height: 30px;
+            border-radius: 4px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background-color 0.2s, color 0.2s;
+        }
+        
+        .edit-task-button:hover {
+            background-color: #444;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -16,7 +43,8 @@
             
             {% if high_priority_tasks %}
                 {% for task in high_priority_tasks %}
-                <div class="task" data-task-id="{{ task.id }}">
+                <div class="task" data-task-id="{{ task.repoId }}">
+                    <button class="edit-task-button" title="Edit Task"><i class="fas fa-pencil-alt"></i></button>
                     <div class="task-controls">
                         <button class="task-button move-up" onclick="" title="Move Up"><i class="fas fa-chevron-up"></i></button>
                         <button class="task-button move-down" onclick="" title="Move Down"><i class="fas fa-chevron-down"></i></button>
@@ -48,6 +76,7 @@
             {% if medium_priority_tasks %}
                 {% for task in medium_priority_tasks %}
                 <div class="task" data-task-id="{{ task.id }}">
+                    <button class="edit-task-button" title="Edit Task"><i class="fas fa-pencil-alt"></i></button>
                     <div class="task-controls">
                         <button class="task-button move-up" onclick="" title="Move Up"><i class="fas fa-chevron-up"></i></button>
                         <button class="task-button move-down" onclick="" title="Move Down"><i class="fas fa-chevron-down"></i></button>
@@ -79,6 +108,7 @@
             {% if low_priority_tasks %}
                 {% for task in low_priority_tasks %}
                 <div class="task" data-task-id="{{ task.id }}">
+                    <button class="edit-task-button" title="Edit Task"><i class="fas fa-pencil-alt"></i></button>
                     <div class="task-controls">
                         <button class="task-button move-up" onclick="" title="Move Up"><i class="fas fa-chevron-up"></i></button>
                         <button class="task-button move-down" onclick="" title="Move Down"><i class="fas fa-chevron-down"></i></button>
