properly added the refresh button

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+        <button class="refresh-button" onclick="handleRefreshRepos(event)" title="Refresh Repos"><i class="fas fa-sync-alt"></i></button>
         <button class="edit-repoignore-button" onclick="handleEditRepoignore(event)" title="Edit .repoignore"><i class="fas fa-pencil-alt"></i></button>
         
         <!-- Edit .repoignore Modal -->
